<resources>
    <string name="app_name">Playlist maker</string>
    <string name="btn_text_search">Поиск</string>
    <string name="btn_text_media">Медиатека</string>
    <string name="btn_text_setting">Настройки</string>
    <string name="setting_mnu_theme">Темная тема</string>
    <string name="setting_mnu_shared">Поделиться приложением</string>
    <string name="setting_mnu_support">Написать в поддержку</string>
    <string name="setting_mnu_agree">Пользовательское соглашение</string>
    <string name="setting_title">Настройки</string>
    <string name="search_title">Поиск</string>
    <string name="media_title">Медиатека</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="shared_title">Поделиться через</string>
    <string name="no_connect_internet">Отсутствует подключение к интернету</string>
    <string name="url_android_dev">https://practicum.yandex.ru/android-developer</string>
    <string name="url_offer">https://yandex.ru/legal/practicum_offer</string>
    <!--SearchActivity-->
    <string name="hint_edit_search">Поиск</string>
    <string name="image_description">Иконка</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="btn_update">Обновить</string>
    <string name="text_view_your_search">Вы искали</string>
    <string name="btn_clear_search_history">Очистить историю</string>
    <!--AudioPlayerActivity-->
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="loading">Загрузка</string>
    <string name="add_playlist">Добавить в плейлист</string>
    <string name="track_add_playlist_success">Добавлено в плейлист "%1$s"</string>
    <string name="track_add_playlist_fail">Трек уже добавлен в плейлист "%1$s"</string>
    <!--MediaActivity-->
    <string name="tab_favorite">Избранные треки</string>
    <string name="tab_playlist">Плейлисты</string>
    <string name="btn_new_playlist">Новый плейлист</string>
    <string name="text_view_no_data_media">Ваша медиатека пуста</string>
    <string name="text_view_no_data_playlist">Вы не создали ни одного плейлиста</string>
    <!--CreatePlaylistFragment-->
    <string name="new_playlist">Новый плейлист</string>
    <string name="edittext_title">Название *</string>
    <string name="edittext_description">Описание</string>
    <string name="btn_create_playlist">Создать</string>
    <string name="playlist_created">"Плейлист \"%s\" создан"</string>

    <string name="alert_dialog_title">Завершить создание плейлиста?</string>
    <string name="alert_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="alert_dialog_btn_cancel">Отмена</string>
    <string name="alert_dialog_btn_positive">Завершить</string>

    <plurals name="view_track_with_d">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
    </plurals>

    <plurals name="view_track_with_02d">
        <item quantity="one">%02d трек</item>
        <item quantity="few">%02d трека</item>
        <item quantity="many">%02d треков</item>
    </plurals>

    <plurals name="view_time_with_d">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
    </plurals>

    <!--PlaylistFragment-->
    <string name="alert_dialog_track_remove_title">Хотите удалить трек?</string>
    <string name="alert_dialog_playlist_remove_title">Удалить плейлист</string>
    <string name="alert_dialog_playlist_remove_body">Хотите удалить плейлист \"%s\"?</string>
    <string name="alert_dialog_remove_btn_positive">Да</string>
    <string name="alert_dialog_remove_btn_negative">Нет</string>
    <string name="txt_shared">Поделиться</string>
    <string name="txt_edit_playlist">Редактировать информацию</string>
    <string name="txt_remove_playlist">Удалить плейлист</string>
    <string name="toast_playlist_no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="toast_playlist_no_tracks2">В плейлисте нет треков</string>

    <!--EditPlaylistFragment-->
    <string name="edit_playlist">Редактировать</string>
    <string name="btn_edit_playlist">Сохранить</string>
</resources>
