<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MainLayout"
    style="@style/MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        app:titleTextAppearance="@style/MaterialTitleColor"
        app:titleTextColor="@color/white"
        app:title="@string/app_name"/>

    <Button
        style="@style/ButtonMenu"
        android:id="@+id/btnSearch"
        android:text="@string/btn_text_search"
        app:icon="@drawable/ic_search_24"/>
    <Button
        style="@style/ButtonMenu"
        android:id="@+id/btnMedia"
        android:text="@string/btn_text_media"
        app:icon="@drawable/ic_media_24"/>
    <Button
        style="@style/ButtonMenu"
        android:id="@+id/btnSetting"
        android:layout_marginBottom="18dp"
        android:text="@string/btn_text_setting"
        app:icon="@drawable/ic_setting_24"/>
</LinearLayout>