<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.media.fragments.CreatePlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        app:titleTextAppearance="@style/MaterialTitleColor"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/new_playlist"/>

    <ImageView
        android:id="@+id/imageView"
        style="@style/ImageNewPlaylist"
        android:contentDescription="@string/image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <EditText
        android:id="@+id/edtTitle"
        style="@style/EditTextNewPlaylistWithColor"
        android:layout_marginTop="@dimen/dp_32"
        android:hint="@string/edittext_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edtDescription"
        style="@style/EditTextNewPlaylistWithColor"
        android:hint="@string/edittext_description"
        app:layout_constraintTop_toBottomOf="@+id/edtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnCreatePlaylist"
        style="@style/ButtonCreatePlaylistWithColor"
        android:text="@string/btn_create_playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>