<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    style="@style/SearchActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        app:titleTextAppearance="@style/MaterialTitleColor"
        app:title="@string/search_title"
        app:navigationIcon="@drawable/ic_arrow_back_24"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_16">

        <EditText
            android:id="@+id/editTextSearch"
            style="@style/SearchEditTextColor"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/hint_edit_search"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/button_clear_search"
            style="@style/SearchClearImageView"
            android:contentDescription="@string/image_description"/>
    </FrameLayout>

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="@dimen/dp_44"
        android:layout_height="@dimen/dp_44"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="com.practicum.playlistmaker.ui.search.activity.SearchActivity"
        tools:orientation="vertical"
        tools:listitem="@layout/item_search_track"
        tools:itemCount="7"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/layoutFail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgSearchFail"
            style="@style/SearchFailImageView"
            android:contentDescription="@string/image_description"/>

        <TextView
            android:id="@+id/txtViewSearchFailMessage"
            style="@style/TextViewFailColor"
            android:text="@string/nothing_found"/>

        <Button
            style="@style/ButtonFailUpdateColor"
            android:id="@+id/btnSearchFailUpdate"
            android:text="@string/btn_update"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@style/TextViewYourSearchColor"
            android:text="@string/text_view_your_search"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:fillViewport="true">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </ScrollView>

        <Button
            style="@style/ButtonClearHistoryColor"
            android:id="@+id/btnClearHistory"
            android:text="@string/btn_clear_search_history"/>
    </LinearLayout>

</LinearLayout>