<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/btnNewPlaylist"
        style="@style/ButtonNewPlaylistWithColor"
        android:text="@string/btn_new_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutDefault"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewPlaylist"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imgNoData"
            style="@style/ImageNoData"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_nothing_found_120" />

        <TextView
            android:id="@+id/txtNoData"
            style="@style/TextViewNoDataWithColor"
            android:text="@string/text_view_no_data_playlist" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylists"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:orientation="horizontal"
        android:visibility="visible"
        tools:itemCount="7"
        tools:listitem="@layout/item_grid_playlist"
        tools:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/btnNewPlaylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>